--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
     </section>
 
     <div class="cta">
-      <h2>Garanta sua cópia com acesso imediato</h2>
-      <button onclick="window.location.href='https://seulinkdecompra.com'">Quero o meu agora</button>
+      <h2>↓</h2>
+     
     </div>
 
     <div class="form-section">
-  <center><h3>Ou receba uma prévia gratuita por e-mail:</h3></center>
-  <form action="https://seuplataformadeemail.com/submit" method="POST">
+  <center><h3>Garanta sua cópia com acesso imediato</h3></center>
+  <form action="https://formsubmit.co/felipealeexo@gmail.com" method="POST">
     <div style="max-width: 500px; margin: 0 auto; display: flex; flex-direction: column; gap: 16px;">
-      <input type="text" name="name" placeholder="Seu nome completo" required />
-      <input type="email" name="email" placeholder="Seu melhor e-mail" required />
-      <button type="submit">Quero minha prévia gratuita</button>
+     <input type="email" name="email" placeholder="Digite seu E-mail" required>
+  <input type="hidden" name="_next" value="https://seusite.com/compra.html">
+  <button type="submit">Quero o E-book !</button>
     </div>
   </form>
 </div>
